Changed button layout to fit correctly on mobile

--- a/_display.scss
+++ b/_display.scss
@@ -23,7 +23,7 @@
 #display {
   height: 10vh;
   width: 100%;
-  font-size: 7vw;
+  font-size: 35px;
   background-color: rgb(244, 241, 241);
   border: none;
   border-radius: 10px 10px 0 0;
@@ -38,7 +38,7 @@
   height: 10vh;
   width: 100%;
   margin-bottom: 20px;
-  font-size: 10vw;
+  font-size: 45px;
   background-color: rgb(244, 241, 241);
   border: none;
   border-radius: 0 0 10px 10px;
