--- a/_layout.scss
+++ b/_layout.scss
@@ -29,12 +29,21 @@
 
 body {
   margin: 20px;
-  height: 100vh;
+  background-color: rgb(188, 244, 230);
+  display: flex;
+  justify-content: center;
+  height: fit-content;
 }
 
 .calculator {
-  //   position: relative;
+  // position: relative;
   //   max-width: 300px;
   //   width: 100%;
-  min-height: 100vh;
+  //   min-height: 100vh;
+  // min-height: auto;
+  max-width: 400px;
+  background-color: rgb(251, 251, 247);
+  border: 2px solid rgb(251, 251, 247);
+  border-radius: 20px;
+  padding: 20px;
 }
