--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -2,17 +2,18 @@ button {
   aspect-ratio: 1/1;
   color: white;
   border-radius: 10px;
-  font-size: 6vw;
+  font-size: 35px;
 }
 
 .buttons {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 380px;
   display: grid;
-  grid-template-rows: repeat(5, 20%);
+  grid-template-rows: repeat(5, 1fr);
   grid-template-columns: repeat(4, 1fr);
   //   row-gap: 5vw;
   //   column-gap: 5vw;
-  gap: 2vw;
+  gap: 12px;
 
   .lightgrey {
     background-color: rgb(189, 189, 189);
@@ -25,11 +26,44 @@ button {
     &__0 {
       grid-column: 1/3;
       aspect-ratio: unset;
-      height: 93.2%;
     }
   }
 
   .green {
     background-color: rgb(77, 230, 179);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  button {
+    font-size: 60px;
+  }
+
+  .buttons {
+    // max-width: 380px;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    //   row-gap: 5vw;
+    //   column-gap: 5vw;
+    gap: 12px;
+
+    .lightgrey {
+      background-color: rgb(189, 189, 189);
+      color: black;
+    }
+
+    .darkgrey {
+      background-color: rgb(55, 55, 55);
+
+      &__0 {
+        grid-column: 1/3;
+        aspect-ratio: unset;
+      }
+    }
+
+    .green {
+      background-color: rgb(77, 230, 179);
+    }
   }
 }
